data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1171.wast
;; 2. **Test Description:**    - Place the `unreachable` instruction inside a `loop` immediately before a `br` instruction which should break the loop. The `br` should never execute due to the `unreachable` trap.    - Constraint: Confirms that the unreachable instruction causes an immediate trap, even within loops.    - Infinite Loop Relation: Checks if the loop is bypassed due to the trap, thus testing potential infinite loop prevention.

(assert_invalid
  (module
    (func $loop_unreachable_before_br
      (loop
        unreachable
        br 0
      )
    )
  )
  "unreachable executed within loop before br"
)